hphp/test/zend/good/ext/standard/tests/strings/crypt.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('crypt')) {
  die("SKIP crypt() is not available");
}
}
