hphp/test/zend/bad/ext/gd/tests/imagedashedline_basic.php.skipif
<?php 
	if (!function_exists('imagedashedline')) die('skip imagedashedline() not available'); 
	if (!(imagetype() & IMG_PNG)) die('skip PNG Support is not enabled');
?>